Refactoring backend
Se refactorizan las clases y metodos del backend y los test se modifican levemente conservando su funcionalidad y flujo original en comparacion a los del pre-refactoring